--- a/Films/package.json
+++ b/Films/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
+    "emailjs-com": "^3.2.0",
     "json-server": "^0.17.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.6.2",
